# flask-redis-k8s

./: .gitignore  Dockerfile  README.md  deployment.yaml  docker-compose.yaml  main.py  pyproject.toml
k8s/: app-configmap.yaml  app-deployment.yaml  ingress.yaml  namespace.yaml  redis-deployment.yaml
src/application/: use_cases.py
src/domain/: counter.py  exceptions.py  repositories.py
src/infrastructure/: container.py  repositories.py
src/presentation/: app.py
tests/integration/: test_api.py  test_redis_repository.py
tests/unit/: test_counter_domain.py  test_counter_repository.py  test_counter_use_cases.py
